--- a/weather.index.html
+++ b/weather.index.html
@@ -2,19 +2,20 @@
 <html>
 <head>
 	<title>Weather App</title>
-	<script src="weather.js"> 
-	</script>
+
 </head>
 <body>
 <div class="container">
-<div>
+<h1>Local Weather</h1>
+<div id="main">
 	
 </div>
 	
 </div>
 
-<script src="weather.js"> 
-	</script>
+ 
+	
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script src="weather.js"></script>
 </body>
 </html>
