--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Weather App</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="styles/weather.css">
+	<link rel="stylesheet" href="weather.css">
+	
+	
 </head>
 <body>
 
 	<div class="container">
 		<h1>Local Weather</h1>
-		<div id="main"></div>
+
+		<div id="main">
+			<img src='' alt=''> 
+		</div>
+
+	<button id="units" type="button" class="btn">Convert</button>
 	</div>
 
+
+
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="scripts/weather.js"></script>
+	<script src="weather.js"></script>
 </body>
 </html>
