--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Weather App</title>
-	<link rel="stylesheet" href="weather.css">
-	
-	
+	<link rel="stylesheet" href="styles/weather.css">
+
+
 </head>
 <body>
 
@@ -14,7 +14,7 @@
 		<h1>Local Weather</h1>
 
 		<div id="main">
-			<img src='' alt=''> 
+			<img src='' alt=''>
 		</div>
 
 	<button id="units" type="button" class="btn">Convert</button>
@@ -23,6 +23,6 @@
 
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="weather.js"></script>
+	<script src="scripts/weather.js"></script>
 </body>
 </html>
