moved icon to seperate div

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 	<div class="container">
 		<h1>Local Weather</h1>
 
-		<div id="main">
+		<div id="icon">
 			<img src='' alt=''>
 		</div>
+
+		<div id="main"></div>
+
 
 	<button id="units" type="button" class="btn">Convert</button>
 	</div>
